--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,3 +1,6 @@
+@import "./reset.scss";
+@import "../components/input-material/input-material.scss";
+
 body {
-  background: blue;
+  background: white;
 }
