input with styles

--- a/src/components/input-material/input-material.pug
+++ b/src/components/input-material/input-material.pug
@@ -1,4 +1,4 @@
 mixin input-material(type, name, placeholder, value)
   div.input-material
-    input.input-material__feild(type=type name=name)
+    input.input-material__feild(type=type name=name placeholder=' ')
     label.input-material__label #{placeholder}
