--- a/src/components/input-material/_input-material.scss
+++ b/src/components/input-material/_input-material.scss
@@ -2,6 +2,9 @@
   position: relative;
   padding-top: 21px;
 
+  font-family: Inter;
+
+
   &__feild {
     border-color: transparent;
     outline: none;
@@ -13,11 +16,24 @@
 
     &:focus + .input-material__label {
       top: 7px;
+      font-size: 9px;
+      line-height: 9px;
+      color: #999999;
+    }
+
+    &:not(:placeholder-shown) + .input-material__label {
+      top: 7px;
+      font-size: 9px;
+      line-height: 9px;
+      color: #999999;
     }
   }
 
 
   &__label {
+    font-size: 13px;
+    line-height: 13px;
+    color: #999999;
     position: absolute;
     top: 28px;
     left: 0;
