--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,12 +1,44 @@
 @import "./reset.scss";
+@import "./base.scss";
 @import "../components/input-material/input-material.scss";
+@import "../components/button/button.scss";
 
-@font-face {
-  font-family: "Inter";
-  src: url("../assets/fonts/inter/Inter-Regular.ttf");
+
+
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-body {
-  background: white;
-  font-family: 'Inter';
+.login-form{
+  height: 460px;
+  width: 340px;
+  padding: 50px 30px 30px 30px;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
+  border-radius: 12px;
+
+  &__title {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 20px;
+    text-align: center;
+    color: #1E1E1E;
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding-top: 57px;
+  }
+  &__buttons {
+    margin-top: auto;
+  }
+
+  &__button {
+
+  }
 }
