--- a/src/pages/sign-up/sign-up.pug
+++ b/src/pages/sign-up/sign-up.pug
@@ -1,7 +1,25 @@
 extends ../../layout/main.pug
+include ../../components/input-material/input-material.pug
+include ../../components/button/button.pug
+
 
 block linkCss
   link(rel='stylesheet', href='./sign-up.scss')
 
 block content
-  div sign-up
+  .login
+    div.login-form
+      .login-form__title Регистрация
+      form.login-form__form(action="./chat/chat.html", method="GET")
+        +input-material('email', 'email', 'Почта')
+        +input-material('text', 'login', 'Логин')
+        +input-material('text', 'first_name', 'Имя')
+        +input-material('text', 'second_name', 'Фамилия')
+        +input-material('tel', 'phone', 'Телефон')
+        +input-material('password', 'password', 'Пароль')
+        +input-material('password', 'password', 'Пароль (ещё раз)')
+        .login-form__buttons
+          .login-form__button
+            +button('Зарегистрироваться', 'submit', 'btn-primary btn-stretch')
+          .login-form__button
+            a.btn.btn-link.btn-stretch(href='../index.pug') Войти
