--- a/src/pages/login-form.scss
+++ b/src/pages/login-form.scss
@@ -6,11 +6,13 @@
 }
 
 .login-form{
-  height: 460px;
+  min-height: 460px;
   width: 340px;
   padding: 50px 30px 18px 30px;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
   border-radius: 12px;
+  display: flex;
+  flex-direction: column;
 
   &__title {
     font-style: normal;
@@ -24,8 +26,8 @@
   &__form {
     display: flex;
     flex-direction: column;
-    height: 100%;
     padding-top: 30px;
+    flex-grow: 1;
   }
   &__buttons {
     margin-top: auto;
