change scss includes

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,6 +4,8 @@ include ../components/button/button.pug
 
 block linkCss
   link(rel='stylesheet', href='./index.scss')
+  link(rel='stylesheet', href='./base.scss')
+ 
 
 block content
   .login
