--- a/src/pages/sign-up/sign-up.pug
+++ b/src/pages/sign-up/sign-up.pug
@@ -5,6 +5,7 @@ include ../../components/button/button.pug
 
 block linkCss
   link(rel='stylesheet', href='./sign-up.scss')
+  link(rel='stylesheet', href='../base.scss')
 
 block content
   .login
