--- a/src/pages/base.scss
+++ b/src/pages/base.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Inter";
-  src: url("/src/assets/fonts/inter/Inter-Regular.ttf");
+  src: url("../assets/fonts/inter/Inter-Regular.ttf");
 }
 
 * {
