--- a/src/pages/sign-up/sign-up.pug
+++ b/src/pages/sign-up/sign-up.pug
@@ -4,8 +4,10 @@ include ../../components/button/button.pug
 
 
 block linkCss
-  link(rel='stylesheet', href='./sign-up.scss')
+  link(rel='stylesheet', href='../reset.scss')
   link(rel='stylesheet', href='../base.scss')
+  link(rel='stylesheet', href='./sign-up.scss')
+ 
 
 block content
   .login
