--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -3,15 +3,16 @@ include ../components/input-material/input-material.pug
 include ../components/button/button.pug
 
 block linkCss
-  link(rel='stylesheet', href='./index.scss')
+  link(rel='stylesheet', href='./reset.scss')
   link(rel='stylesheet', href='./base.scss')
+  link(rel='stylesheet', href='./index.scss')
  
 
 block content
   .login
     div.login-form
       .login-form__title Вход
-      form.login-form__form(action="./chat/chat.html", method="GET")
+      form.login-form__form(action="./chat-empty/chat-empty.html", method="GET")
         +input-material('text', 'login', 'Логин')
         +input-material('password', 'password', 'Пароль')
         .login-form__buttons
