--- a/src/pages/chat-empty/chat-empty.pug
+++ b/src/pages/chat-empty/chat-empty.pug
@@ -10,4 +10,9 @@ block content
   div.chat
     .chat-list
       +chat-item('Андрей', 'Изображение', '10:49', 2)
+      +chat-item('Киноклуб', 'Вы: стикер', '15:12')
+      +chat-item('Day.', 'В 2008 году художник Jon Rafman  начал собирать...', '1 Мая 2020')
+      +chat-item('Андрей', 'Изображение', '10:49', 10)
+      +chat-item('Стас Рогозин', 'И Human Interface Guidelines и Material Design рекомендуют...', 'Пн', 2)
+      +chat-item('Андрей', 'Изображение', '10:49', 2)
     .chat-detail
