--- a/src/pages/chat-empty/chat-empty.scss
+++ b/src/pages/chat-empty/chat-empty.scss
@@ -1,16 +1,31 @@
 @import "../../components/chat-item/chat-item.scss";
+@import "../../components/link-profile/link-profile.scss";
 
 .chat {
   height: 100vh;
   display: flex;
-}
 
-.chat-list {
-  min-width: 310px;
-  background: #FBFBFB;
-  border-right: 1px solid #EAEAEA;
+  &__sidebar {
+    flex-basis: 310px;
+    background: #FBFBFB;
+    border-right: 1px solid #EAEAEA;
+  }
+
+  &__profile-link {
+    padding: 21px 10px 23px 0;
+    text-align: end;
+  } 
 }
 
 .chat-detail {
-  width: 100%;
+  display: flex;
+  align-items: center;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 12px;
+  text-align: center;
+  color: #999999;
+  justify-content: center;
+  flex-grow: 1;
 }
