--- a/src/pages/sign-up/sign-up.pug
+++ b/src/pages/sign-up/sign-up.pug
@@ -20,7 +20,7 @@ block content
         +input-material('text', 'second_name', 'Фамилия')
         +input-material('tel', 'phone', 'Телефон')
         +input-material('password', 'password', 'Пароль')
-        +input-material('password', 'password', 'Пароль (ещё раз)')
+        +input-material('password-confirm', 'password-confirm', 'Пароль (ещё раз)')
         .login-form__buttons
           .login-form__button
             +button('Зарегистрироваться', 'submit', 'btn-primary btn-stretch')
