--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -12,4 +12,4 @@ block content
           .login-form__button
             +button('Войти', 'submit', 'btn-primary btn-stretch')
           .login-form__button
-            a.btn.btn-link.btn-stretch(href='./sign-up/sign-up.pug') Зарегистрироваться
+            a.btn.btn-link.btn-stretch(href='./sign-up/sing-up.html') Зарегистрироваться
