--- a/src/pages/500/500.pug
+++ b/src/pages/500/500.pug
@@ -2,4 +2,4 @@ include ../../components/error/error.pug
  
 block content
   .error-page-500
-    +error('500', 'Мы уже фиксим', '../chat-empty/chat-empty.pug', 'Назад к чатам')
+    +error('500', 'Мы уже фиксим', '../chat-empty/chat-empty.html', 'Назад к чатам')
