--- a/src/pages/sign-up/sign-up.pug
+++ b/src/pages/sign-up/sign-up.pug
@@ -24,4 +24,4 @@ block content
           .login-form__button
             +button('Зарегистрироваться', 'submit', 'btn-primary btn-stretch')
           .login-form__button
-            a.btn.btn-link.btn-stretch(href='../index.pug') Войти
+            a.btn.btn-link.btn-stretch(href='../index.html') Войти
